--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,12 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.11</artifactId>
-			<version>1.6.0</version>
+			<version>1.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-mllib_2.11</artifactId>
+			<version>1.6.1</version>
 		</dependency>
 	</dependencies>
 	<build>
